Added solutions to the base64 decode data problem using c++ and d
Corrected the task name so the summary is correct